--- a/manifest.json
+++ b/manifest.json
@@ -7,5 +7,8 @@
     "scripts": ["background.js"],
     "persistent": false
   },
-  "permissions": ["storage"]
+  "permissions": ["storage"],
+  "browser_action": {
+    "default_icon": "images/logo.png"
+  }
 }
