--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,7 @@
   },
   "permissions": ["storage"],
   "browser_action": {
-    "default_icon": "images/logo.png"
+    "default_icon": "images/logo.png",
+    "default_title": "Zechrome"
   }
 }
